Fixed AboutUs height. Footer was overlapping

--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    height: 96vh;
+    /* height: 96vh; */
   }
 
     .about-container {
@@ -65,7 +65,7 @@
 
     .welcome {
         position:absolute;
-        top: 32%;
+        top: 40%;
         left: 15%;
         transform: rotate(-10deg);
         opacity: 0.9;
